# sliru-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.zed/: debug.json
src/: lib.rs  main.rs
src/enums/: format_converter.rs  mod.rs
src/services/: csv_converter.rs  hdoc_request.rs  json_converter.rs  mod.rs  xml_converter.rs  yaml_converter.rs
src/structs/: mod.rs  request_data.rs  request_result.rs
translations/: sliru-tools.pot
translations/en/LC_MESSAGES/: sliru-tools.po
translations/pt_BR/LC_MESSAGES/: sliru-tools.po
ui/: app-window.slint  file-verify-container.slint  format-converter-container.slint  hdoc-request-container.slint  tools-container.slint
ui/component/: item-card.slint
web/: index.html
web/pkg/: sliru_tools_lib.js
