[package]
name = "sliru-tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "sliru_tools_lib"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "sliru_tools"
path = "src/main.rs"

[dependencies]
slint = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.4.0"
yaml-rust2 = "0.10.4"
quick-xml = "0.38.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
rfd = "0.15.4"
reqwest = { version = "0.12.24", features = ["cookies"] }
tokio = { version = "1.48.0", features = ["rt", "time", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--strip-debug",
]
