[package]
name = "sliru-tools"
version = "0.1.0"
edition = "2024"
description = "Pequena aplicação rust/slint com ferramentas simples"
license = "MIT"
repository = "https://github.com/igorfs10/sliru-tools"
authors = ["Igorfs10"]

[lib]
name = "sliru_tools_lib"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "sliru_tools"
path = "src/main.rs"

[dependencies]
slint = { version = "1.14.1", features = ["compat-1-2"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
csv = { version = "1.4.0", default-features = false }
yaml-rust2 = { version = "0.10.4", default-features = false }
quick-xml = { version = "0.38.3", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
rfd = { version = "0.15.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.105", default-features = false}
wasm-bindgen-futures = { version = "0.4.55", default-features = false }
reqwest = { version = "0.12.24", default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12.24", default-features = false }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--strip-debug",
]
